<resources>
    <string name="app_name">Health Info</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">profile</string>
    <string name="setting">setting</string>
    <string name="more">more</string>
    <string name="search">search</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_health_info">Welcome To Health Info</string>
    <string name="already_have_account">Already have account?</string>
    <string name="zero">0</string>
    <string name="votes">votes</string>
    <string name="answers">answers</string>
    <string name="views">views</string>
    <string name="let_s_get_to_know_you_better">Let\'s get to know you better</string>
    <string name="your_first_name">your first name here....</string>
    <string name="age">age</string>
    <string name="experience">Experience</string>
    <string name="specialization">Specialization</string>
    <string name="work_location">work location</string>
    <string name="your_last_name_here">your last name here....</string>
    <string name="finish">Finish</string>
    <string name="doctor_profile_picture">Doctor profile picture</string>
    <string name="home_address">Home address</string>
    <string name="doctor">Doctor</string>
    <string name="just_user">Just User</string>
    <string name="tell_us_more_are_your">Tell us more.are your?</string>
    <string name="doctor_Just_user">a Doctor? Or Just a User?</string>
    <string name="are_you">Are You?</string>
    <string name="logout">Logout</string>
    <string name="doctor_name">doctor_name</string>
    <string name="dummy_text">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="title_activity_ask_question">AskQuestion</string>
    <string name="send_question">Send question</string>
    <string name="ask_your_public_question">Ask your public question</string>
    <string name="logo_image">logo_image</string>
    <string name="e_g_is_taking_medicine_safe">e.g is taking medicine safe.....</string>
    <string name="question_title">Question Title</string>
    <string name="question_body">Question Body</string>
    <string name="e_g_add_your_question_detail">e.g add your question detail.....</string>
    <string name="be_more_specific_on_your_question_title">Be more specific on your question title</string>
    <string name="question_image">question image</string>
    <string name="back_button">back button</string>
    <string name="add_your_answer_here">add your answer here...</string>
    <string name="send_btn">send btn</string>
    <string name="dr">Dr.</string>
    <string name="question_detail">Question Detail</string>
    <string name="user_age">Age</string>
</resources>