<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_search_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/more"
        android:contentDescription="@string/more"
        android:icon="@drawable/ic_more_24"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/setting_menu"
                android:contentDescription="@string/setting"
                android:icon="@drawable/ic_setting_24"
                android:title="@string/setting"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/profile_menu"
                android:contentDescription="@string/profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile"
                android:visible="false"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/login_menu"
                android:contentDescription="@string/login"
                android:icon="@drawable/ic_login_24"
                android:title="@string/login"
                android:visible="false"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/logout_menu"
                android:contentDescription="@string/logout"
                android:icon="@drawable/ic_log_out_account"
                android:title="@string/logout"
                android:visible="false"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

</menu>