<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:padding="5sp"
        android:text="@string/question_title" />

    <Button
        android:id="@+id/answer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_title"
       android:layout_alignParentStart="true"
        android:layout_margin="2sp"
        android:backgroundTint="@color/pencil"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16sp"
        android:fontFamily="@font/roboto_bold"
        android:padding="5sp"
        android:text="@string/answers" />

    <Button
        android:id="@+id/view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_title"
        android:layout_alignParentEnd="true"
        android:layout_margin="2sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:backgroundTint="@color/pencil"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/views_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18sp"
        android:fontFamily="@font/roboto_bold"
        android:padding="5sp"
        android:text="@string/views" />

</RelativeLayout>