<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:backgroundTint="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp"
        tools:context=".ui.ask_question.AskQuestion">
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_margin="2sp"
            android:backgroundTint="@color/black"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/health_info_img" />

            <TextView
                android:id="@+id/public_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/ask_your_public_question"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/be_more_specific_on_your_question_title" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_g_is_taking_medicine_safe"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/question_body" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/detail_question_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:endIconDrawable="@drawable/ic_image_24"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_g_add_your_question_detail" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dialog_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:backgroundTint="@color/pencil"
            android:contentDescription="@string/send_question"
            android:src="@drawable/ic_send_24" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>